@@ -1,5 +1,0 @@
-from Products.PlonePAS.tools.membership import MembershipTool as BaseTool
-
-
-class MembershipTool(BaseTool):
-    pass
